<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cleo.labs</groupId>
  <artifactId>sclient</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>

  <name>sclient</name>

  <scm>
    <url>https://github.com/cleo/${project.name}</url>
    <connection>scm:git:https://github.com/cleo/${project.name}.git</connection>
    <developerConnection>scm:git:https://github.com/cleo/${project.name}.git</developerConnection>
  </scm>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Cleo Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/cleodev/${project.name}</url>
    </repository>
  </distributionManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.8</java.version>
    <junit.version>5.9.2</junit.version>
    <mockito.version>2.28.2</mockito.version>
    <guava.version>31.1-jre</guava.version>
    <gson.version>2.10.1</gson.version>
    <picocli.version>4.7.1</picocli.version>
    <java.diff.utils.version>4.12</java.diff.utils.version>
    <maven.surefire.plugin.version>3.0.0-M8</maven.surefire.plugin.version>
    <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
    <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
    <maven.shade.plugin.version>3.4.1</maven.shade.plugin.version>
    <really.executable.jar.maven.plugin.version>2.0.0</really.executable.jar.maven.plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>${picocli.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <annotationProcessorPaths>
            <path>
              <groupId>info.picocli</groupId>
              <artifactId>picocli-codegen</artifactId>
              <version>${picocli.version}</version>
            </path>
          </annotationProcessorPaths>
          <compilerArgs>
            <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire.plugin.version}</version>
        <configuration>
          <forkCount>3</forkCount>
          <reuseForks>true</reuseForks>
          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven.jar.plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>${maven.shade.plugin.version}</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <artifactSet>
                <includes>
                  <include>info.picocli:*</include>
                </includes>
              </artifactSet>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>com.cleo.labs.sclient.cli.SclientCLI</mainClass>
                </transformer>
              </transformers>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <shadedArtifactAttached>true</shadedArtifactAttached>
              <shadedClassifierName>cli</shadedClassifierName>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.skife.maven</groupId>
        <artifactId>really-executable-jar-maven-plugin</artifactId>
        <version>${really.executable.jar.maven.plugin.version}</version>
        <configuration>
          <!-- value of flags will be interpolated into the java invocation -->
          <!-- as "java $flags -jar ..." -->
          <!-- <flags>-Xmx1G</flags> -->

          <!-- (optional) name for binary executable, if not set will just -->
          <!-- make the regular jar artifact executable -->
          <programFile>sclient</programFile>

          <!-- (optional) support other packaging formats than jar -->
          <!-- <allowOtherTypes>true</allowOtherTypes> -->
          
          <!-- (optional) name for a file that will define what script gets -->
          <!-- embedded into the executable jar.  This can be used to -->
          <!-- override the default startup script which is -->
          <!-- `#!/bin/sh -->
          <!--            -->
          <!-- exec java " + flags + " -jar "$0" "$@" -->
          <!-- <scriptFile>src/packaging/someScript.extension</scriptFile> -->
        </configuration>

        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>really-executable-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
